# durable-execution-engine-SDK-python

./: .flake8  .gitignore  DockerFile  Meeting notes March 3rd.txt  README.md  format.ps1  lint.ps1  main.py  makefile  pyproject.toml  pytest.ini  requirements.txt
.github/: pull_request_template.md
.github/workflows/: python.yml
Example/: Dockerfile  requirements.txt
Example/app/: __init__.py  main.py
app/: main.py
example/: DEMO_WORKFLOWS.md  Dockerfile  main.py
example/app/: main.py
example/demo/: actions.py  models.py
src/: draft.py
src/SDKs/: actionSDK.py
src/app/: Request.py  Response.py  __init__.py  app.py  internal_client.py  service.py  service_registry.py  types.py  workflow.py  workflow_context.py
src/app/_internal/: __init__.py  internal_client.py  service_registry.py  types.py  utils.py  workflow.py
src/classes/: __init__.py  actionClass.py  projectClass.py
src/client/: workflow_manager.py
src/models/: execution_model.py
test/: action_class_test.py  test.py  test_request.py  test_response.py  test_workflow_manager.py  unittest.py
tests/: conftest.py  test_app.py  test_service.py  test_workflow_context.py
tests/internal/: test_internal_client.py  test_service_registry.py  test_workflow.py
